--- a/club.html
+++ b/club.html
@@ -53,7 +53,7 @@
     </header>
     <main>
         <section>
-            <h2 class="club-name">Câu lạc bộ bóng đá</h2>
+            <h2 class="club-name">Câu lạc bộ bóng đá THPT Phú Lương</h2>
             <div class="club-hero"> 
                 <img src="images/soccer.jpg" alt="Phu Luong High School Stadium" class="club-img">
                 <div class="club-info">
@@ -110,14 +110,22 @@
             </div>
             <div class="club-description">
                 <div class="description">
-                    <i class="fa-regular fa-clock">  13/2/2010</i>
+                    <i class="fa-solid fa-clock">  13 / 2 / 2010</i>
                     <p class="description-title">Thành lập</p>
                     <p class="club-description-content"></p>
                 </div>
                 <div class="description">
-                    <i class="fa-regular fa-calendar">  2</i>
+                    <i class="fa-solid fa-calendar">  2</i>
                     <p class="description-title">Sự kiện</p>
                     <p class="club-description-content"></p>
+                </div>
+                <div class="description">
+                    <i class="fa-solid fa-star">  4.7</i>
+                    <p class="description-title">Đánh giá</p>
+                </div>
+                <div class="description">
+                    <i class="fa-solid fa-star">  4.7</i>
+                    <p class="description-title">Đánh giá</p>
                 </div>
                 <div class="description">
                     <i class="fa-solid fa-star">  4.7</i>
