--- a/club.html
+++ b/club.html
@@ -57,9 +57,10 @@
             <div class="club-hero"> 
                 <img src="images/soccer.jpg" alt="Phu Luong High School Stadium" class="club-img">
                 <div class="club-info">
-                    <p class="info-title">Thông tin CLB
+                    <h1 class="info-title">
+                        Thông tin CLB<br>
                         <p id="infosub">CLB Bóng đá</p>
-                    </p>
+                    </h1>
                     <div class="info-wrapper">
 
                         
